# rs-hardware-in-loop

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: example.yaml
examples/: rx_template.py  spectrum_rx.py  tone_tx.py  tx_template.py
src/hardware_in_loop/: __init__.py  capture.py  cli.py  config.py  instruments.py  pipeline.py  plugins.py  types.py  waveform.py
tests/: test_config.py  test_waveform.py
