[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hardware-in-loop"
version = "0.1.0"
description = "Reusable Hardware-in-the-Loop runner for arbitrary complex-baseband waveforms"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
hil = [
    "pyvisa>=1.13",
    "pyvisa-py>=0.7",
    "RsWaveform>=0.4",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
hil-run = "hardware_in_loop.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
